# TestImages

./: CMakeLists.txt  README.md  build_and_start.sh  cmake_build.sh  project.pro  qml_build.sh  start.sh
common/: rawimagedata.cpp  rawimagedata.h  result.h
compression/: CMakeLists.txt  compression.pro  icompression.h
compression/internal/: compression.cpp  compression.h  decompression.cpp
qml_plugin/: CMakeLists.txt  build.sh  framesplugin_metatypes.json  framesplugin_qmltyperegistrations.cpp  qml_plugin.pro
qml_plugin/FramesPlugin/: plugin_qml.qrc
qml_plugin/FramesPlugin/Frames/: FileDelegate.qml  FilesListView.qml  ImageScreen.qml  InitAnimation.qml  InitScreen.qml  StartScreen.qml
qml_plugin/src/: FramesPlugin.cpp  FramesPlugin.h
ui/: CMakeLists.txt  Main.qml  main.cpp  sources.qrc  ui.pro
ui/project/: commandlineparser.cpp  commandlineparser.h  datacontroller.cpp  datacontroller.h  imagepic.cpp  imagepic.h  imagescreen.cpp  imagescreen.h
ui/project/internal/: delegate.cpp  delegate.h  filemanager.cpp  filemanager.h  fileslist.cpp  fileslist.h  imageinfo.cpp  imageinfo.h  mainview.cpp  mainview.h
